[ezd]-componestes creados con estilo

--- a/wezdrexpress/resources/Bundle_es.properties
+++ b/wezdrexpress/resources/Bundle_es.properties
@@ -1,7 +1,9 @@
 TITULO_APP=Rexpress
 titulo_inicio=Inicio
 titulo_home=Principal
-btn_login=iniciar sesión
+btn_login=iniciar
 label_correo=Correo
 label_password=Contraseña
 alta_usuario=Alta Usuario
+titulo_iniciar=Iniciar sesión
+titulo_home=Principal
