[EZD]-ACTUALIZACION ULTIMA

--- a/wezdrexpress/resources/Bundle_es.properties
+++ b/wezdrexpress/resources/Bundle_es.properties
@@ -1,9 +1,16 @@
 TITULO_APP=Rexpress
-titulo_inicio=Inicio
+
+#titulo_inicio=Inicio
 titulo_home=Principal
-btn_login=iniciar
+titulo_iniciar=Acceder
+
+#loginView
 label_correo=Correo
 label_password=Contraseña
-alta_usuario=Alta Usuario
-titulo_iniciar=Iniciar sesión
-titulo_home=Principal
+label_reg_usuario=Registrar Usuario
+btn_login=Iniciar
+btn_logout=Cerrar
+
+#homeView
+#tabla HomeView
+titulo_tabla_usuarios=Usuarios
