--- a/wezdrexpress/resources/Bundle_en.properties
+++ b/wezdrexpress/resources/Bundle_en.properties
@@ -1,5 +1,9 @@
-TITULO_APP=Rexpress
-btn_login=Log in
+TITULO_APP=Rexpress (English)
+#titulo_inicio=Start
+titulo_home=Home
+titulo_iniciar=Log On
 label_correo=E-mail
 label_password=Password
-titulo_iniciar=Log in
+reg_usuario=Register User
+btn_login=Log in
+btn_logout=Log out
